--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a class="nav_link" href="#">ЛИЧНЫЙ КАБИНЕТ</a>
                 <a class="nav_link" href="#">НАСТРОЙКИ</a>
             </nav>
-            <p>
+            <p class="trashbag_search">
                 <a href="#"><img class="trashbag" src="/assets/image/trash bag.svg" alt="" srcset=""></a>
                 <a href="#"><img class="search" src="/assets/image/search.svg" alt="" srcset=""></a>
             </p>
@@ -51,18 +51,17 @@
     <div class="prod">
         <div class="product">
             <h1 class="name_product">Сезон 2020</h1>        
-            <ul class="product_product">
+            <div class="product_product">
                 <a href="#"><img class="clock_main" src="/assets/image/clock.svg" alt="clock"><p class="clock_name">Louis XVI ATHOS 165 000 руб.</p></a>
                 <a href="#"><img class="clock_main" src="/assets/image/clock.svg" alt="clock"><p class="clock_name">Louis XVI ATHOS 165 000 руб.</p></a>
                 <a href="#"><img class="clock_main" src="/assets/image/clock.svg" alt="clock"><p class="clock_name">Louis XVI ATHOS 165 000 руб.</p></a>
-            </ul>
+            </div>
         </div>
         <div class="product_collection">
             <div class="new_collection">
                 <p class="collection_text">НОВАЯ КОЛЛЕКЦИЯ</p>
-            </div>
-            <div class="text_text">
-                <a class="asd" href="№">КАТАЛОГ</a>
+                <p class="line"></p>
+                <a class="asd" href="#">КАТАЛОГ</a>
             </div>
         </div>
     </div>
