--- a/index.html
+++ b/index.html
@@ -27,43 +27,93 @@
         </div>
     </div>
     <div class="nav_logo">
-            <nav class="nav_nav">
-                <a class="nav_link" href="#">ПОНРАВИЛОСЬ</a>
-                <a class="nav_link" href="#">ЛИЧНЫЙ КАБИНЕТ</a>
-                <a class="nav_link" href="#">НАСТРОЙКИ</a>
-            </nav>
-            <p class="trashbag_search">
-                <a href="#"><img class="trashbag" src="/assets/image/trash bag.svg" alt="" srcset=""></a>
-                <a href="#"><img class="search" src="/assets/image/search.svg" alt="" srcset=""></a>
-            </p>
-        <a class="logo" href="#">
-                PORTEN
-            </a>
+        <div class="main-logo">
+            <div class="logo-logo">
+                <a class="logo" href="#">
+                    PORTEN
+                </a>
+            </div>
+            <div class="nav">
+                <nav class="nav_nav">
+                    <a class="nav_link" href="#">ПОНРАВИЛОСЬ</a>
+                    <a class="nav_link" href="#">ЛИЧНЫЙ КАБИНЕТ</a>
+                    <a class="nav_link" href="#">НАСТРОЙКИ</a>
+                </nav>
+            </div>
+            <div class="trash-search">
+                <p class="trashbag_search">
+                    <a href="#"><img class="trashbag" src="/assets/image/trash bag.svg" alt="" srcset=""></a>
+                    <a href="#"><img class="search" src="/assets/image/search.svg" alt="" srcset=""></a>
+                </p>
+            </div>
+        </div>    
     </div>
     <div class="main">
+        <div class="main-fon">
+            <img src="/assets/image/Group 1.png" class="logo-porten" alt="logo porten" srcset="">
+            <!-- <img src="/assets/image/Rectangle 6.png" alt="rectangle" srcset=""> -->
+            <!-- <img src="assets/image/main.jpg" alt="main" srcset="">   -->
+        </div>
+        <div class="content-text">
             <p class="content">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus interdum purus, est tortor pulvinar ut in. Fringilla a diam enim sed justo, sed iaculis sagittis. Tortor id eu interdum nec ut iaculis. Penatibus ullamcorper ultricies morbi ipsum sem metus pharetra, mi. Tortor nibh magna feugiat id nunc, dui nisl viverra.
             </p>
-        <img src="/assets/image/Group 1.png" style="position: absolute; top: 377px; width: 185px; height: 133px; left: 867px; z-index: 300;" alt="logo porten" srcset="">
-        <img src="/assets/image/Rectangle 6.png" style="position: absolute; top: 284px; left: 800px; height: 320px; width: 320px; z-index: 300;" alt="rectangle" srcset="">    
-        <img src="assets/image/main.jpg" alt="main" srcset="">  
+        </div>
     </div>
     <div class="prod">
-        <div class="product">
-            <h1 class="name_product">Сезон 2020</h1>        
-            <div class="product_product">
-                <a href="#"><img class="clock_main" src="/assets/image/clock.svg" alt="clock"><p class="clock_name">Louis XVI ATHOS 165 000 руб.</p></a>
-                <a href="#"><img class="clock_main" src="/assets/image/clock.svg" alt="clock"><p class="clock_name">Louis XVI ATHOS 165 000 руб.</p></a>
-                <a href="#"><img class="clock_main" src="/assets/image/clock.svg" alt="clock"><p class="clock_name">Louis XVI ATHOS 165 000 руб.</p></a>
+        <div class="prodd">
+            <div class="product">
+                <h1 class="name_product">Сезон 2020</h1> 
+                <div class="prod-line"></div>
+                <div class="product_product">
+                    <div class="product-item">
+                        <a class="product-link" href="#"><img class="clock_main" src="/assets/image/clock.png" alt="Louis XVI ATHOS 165 000 Р">
+                            <div class="dsa"> Louis XVI ATHOS </div> 
+                            <div> 165 000 Р </div>
+                        </a>
+                    </div>
+                    <div class="product-item">
+                        <a class="product-link" href=""><img class="clock_main" src="/assets/image/clock.png" alt="Louis XVI ATHOS 165 000 Р">
+                            <div class="dsa"> Louis XVI ATHOS </div> 
+                            <div> 165 000 Р </div>
+                        </a>
+                    </div>
+                    <div class="product-item">
+                        <a class="product-link" href="#"><img class="clock_main" src="/assets/image/clock.png" alt="Louis XVI ATHOS 165 000 Р">
+                            <div class="dsa"> Louis XVI ATHOS </div> 
+                            <div> 165 000 Р </div>
+                        </a>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="product_collection">
-            <div class="new_collection">
-                <p class="collection_text">НОВАЯ КОЛЛЕКЦИЯ</p>
-                <p class="line"></p>
-                <a class="asd" href="#">КАТАЛОГ</a>
+            <div class="product_collection">
+                <div class="new_collection">
+                    <p class="collection_text">НОВАЯ КОЛЛЕКЦИЯ</p>
+                    <p class="line"></p>
+                    <a class="asd" href="#">КАТАЛОГ</a>
+                </div>
             </div>
         </div>
     </div>
+    <div class="info">
+        <div class="info-collection">
+            <div class="info-background">
+
+            </div>
+            <div class="info-info">
+                <div class="text2018">
+                    коллекция 2018
+                </div>
+                <div class="line2">
+
+                </div>
+                <div class="info-text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non rutrum ornare ut mattis habitant dui arcu. Sagittis amet nunc ut neque quis nibh arcu. Vivamus vestibulum nisi et venenatis sed scelerisque magna consectetur. Amet convallis quis gravida facilisis vulputate. Faucibus facilisi habitasse ipsum interdum dictum aliquet. Velit quis ullamcorper pulvinar nulla malesuada integer. Aenean praesent viverra nulla nullam natoque volutpat curabitur auctor. Viverra viverra ullamcorper scelerisque risus dignissim egestas. Id aliquam a aliquam egestas leo orci pharetra sed diam. 
+                </div>
+                <button type="button">ПОСМОТРЕТЬ КОЛЛЕКЦИЮ</button>
+            </div>
+        </div>
+    </div>
+    <script src="/asd.js"></script>
 </body>
 </html>
